--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@microsoft/sp-office-ui-fabric-core": "1.11.0",
     "@microsoft/sp-property-pane": "1.11.0",
     "@microsoft/sp-webpart-base": "1.11.0",
+    "@pnp/graph": "^2.4.0",
+    "@pnp/sp": "^2.4.0",
     "bootstrap": "^4.6.0",
     "datatables.net": "^1.10.24",
     "datatables.net-dt": "^1.10.24",
     "jquery": "^3.6.0",
+    "office-ui-fabric-react": "6.214.0",
     "react": "16.8.5",
-    "react-dom": "16.8.5",
-    "office-ui-fabric-react": "6.214.0"
+    "react-dom": "16.8.5"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-3.3": "0.3.5",
